[gd_scene load_steps=6 format=3 uid="uid://bqxvhxqxqxqxt"]

[ext_resource type="Script" uid="uid://chn8of5pi5br7" path="res://algorithms/physicssimulation/bouncingball/BouncingBall.gd" id="1_3bb2d"]
[ext_resource type="Script" uid="uid://s8ltq5ow2gdj" path="res://algorithms/physicssimulation/bouncingball/Ball.gd" id="2_15719"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xqxt"]
albedo_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1xqxt"]
albedo_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2xqxt"]
albedo_color = Color(0.7, 0.7, 0.7, 1)

[node name="BouncingBall" type="Node3D"]
script = ExtResource("1_3bb2d")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.5

[node name="Environment" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="Environment"]
transform = Transform3D(15, 0, 0, 0, 0.1, 0, 0, 0, 15, 0, -0.05, 0)
material_override = SubResource("StandardMaterial3D_0xqxt")

[node name="Walls" type="Node3D" parent="Environment"]

[node name="WallNorth" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(15, 0, 0, 0, 2, 0, 0, 0, 0.1, 0, 1, 7.5)
material_override = SubResource("StandardMaterial3D_1xqxt")

[node name="WallSouth" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(15, 0, 0, 0, 2, 0, 0, 0, 0.1, 0, 1, -7.5)
material_override = SubResource("StandardMaterial3D_1xqxt")

[node name="WallEast" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(0.1, 0, 0, 0, 2, 0, 0, 0, 15, 7.5, 1, 0)
material_override = SubResource("StandardMaterial3D_1xqxt")

[node name="WallWest" type="CSGBox3D" parent="Environment/Walls"]
transform = Transform3D(0.1, 0, 0, 0, 2, 0, 0, 0, 15, -7.5, 1, 0)
material_override = SubResource("StandardMaterial3D_1xqxt")

[node name="Obstacles" type="Node3D" parent="Environment"]

[node name="Obstacle1" type="CSGBox3D" parent="Environment/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.5, -2)
material_override = SubResource("StandardMaterial3D_2xqxt")

[node name="Obstacle2" type="CSGBox3D" parent="Environment/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 3)
material_override = SubResource("StandardMaterial3D_2xqxt")

[node name="Obstacle3" type="CSGBox3D" parent="Environment/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("StandardMaterial3D_2xqxt")

[node name="Balls" type="Node3D" parent="."]

[node name="Ball1" type="Node3D" parent="Balls"]
script = ExtResource("2_15719")
ball_color = Color(1, 0, 0, 1)
initial_position = Vector3(-4, 5, -4)
initial_velocity = Vector3(3, 0, 2)

[node name="Ball2" type="Node3D" parent="Balls"]
script = ExtResource("2_15719")
ball_color = Color(0, 1, 0, 1)
initial_position = Vector3(4, 5, 4)
initial_velocity = Vector3(-2, 0, -3)

[node name="Ball3" type="Node3D" parent="Balls"]
script = ExtResource("2_15719")
ball_color = Color(0, 0, 1, 1)
initial_position = Vector3(0, 5, 0)
initial_velocity = Vector3(1, 0, -1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -250.0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Bouncing Ball Physics
- Multiple balls with different initial conditions
- Collision detection with walls and obstacles
- Momentum conservation and energy loss
- Realistic bouncing behavior"
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Reset Balls"

[node name="PauseButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Pause/Resume"

[node name="GravitySlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 20.0
step = 0.1
value = 10.0

[node name="GravityLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Gravity: 9.8"
